compiler/src/test/resources/amyc/nameAnalyzer/passing/NotDuplicateLocals2.amy
object Locals
  fn foo(): Int = {
    if (true) {
      val i: Int = 42;
      i
    } else {
      42 match {
        case i => 42
      }
    }
  }
end Locals
