compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateMatchLocals1.amy
object Locals
  fn foo(): Int = {
    val i: Int = 42;
    i match {
      case i => 0
    }
  }
end Locals
